fix visible empty div element

--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ body {
 }
 
 div {
+    visibility: hidden;
     font-family: sans-serif;
     color: black;
     text-align: center;
